--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="contact-me">
                 <h2>Get In Touch</h2>
                 <p class="contact-message"> Have an idea? discuss Tech? Hire Me?</p>
-                <a class="btn">CONTACT ME</a>
+                <a class="btn" href="mailto:anvrr@yahoo.com">CONTACT ME</a>
             </div>
           </div>
           <div class="bottom-container">
