--- a/index.html
+++ b/index.html
@@ -3,42 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Anwar's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #000000;
             line-height: 1.6;
-            background-color: #f4f4f9;
-            color: #333;
         }
 
         header {
-            background: #007bff;
-            color: #fff;
-            padding: 1rem 0;
             text-align: center;
+            padding: 2rem 0;
         }
 
         header h1 {
             margin: 0;
             font-size: 2.5rem;
+            font-weight: 700;
         }
 
         nav {
             display: flex;
             justify-content: center;
-            padding: 0.5rem;
-            background: #0056b3;
+            gap: 2rem;
+            margin-top: 1rem;
         }
 
         nav a {
-            color: #fff;
+            color: #000000;
             text-decoration: none;
-            margin: 0 1rem;
             font-weight: 500;
+            font-size: 1rem;
         }
 
         nav a:hover {
@@ -46,17 +44,16 @@
         }
 
         section {
-            padding: 2rem;
-            max-width: 1200px;
-            margin: auto;
-        }
-
-        .about {
+            max-width: 800px;
+            margin: 3rem auto;
             text-align: center;
+            padding: 0 1rem;
         }
 
-        .skills, .projects, .contact {
-            margin-top: 2rem;
+        section h2 {
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+            font-weight: 600;
         }
 
         .skills ul, .projects ul {
@@ -65,25 +62,25 @@
         }
 
         .skills li, .projects li {
-            background: #fff;
-            margin: 0.5rem 0;
+            margin: 1rem 0;
             padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e0e0e0;
+            border-radius: 5px;
+            background-color: #f9f9f9;
         }
 
         footer {
             text-align: center;
-            background: #007bff;
-            color: #fff;
-            padding: 1rem 0;
+            padding: 2rem 0;
             margin-top: 2rem;
+            font-size: 0.9rem;
+            border-top: 1px solid #e0e0e0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Anwar's Portfolio</h1>
     </header>
     
     <nav>
