--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         }
 
         header {
-            text-align: center;
-            padding: 2rem 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
         }
 
         header h1 {
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 1.5rem;
             font-weight: 700;
         }
 
         nav {
             display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-top: 1rem;
+            gap: 1.5rem;
         }
 
         nav a {
@@ -56,16 +56,78 @@
             font-weight: 600;
         }
 
-        .skills ul, .projects ul {
-            list-style: none;
-            padding: 0;
+        .intro {
+            margin-top: 2rem;
         }
 
-        .skills li, .projects li {
+        .intro h2 {
+            font-size: 1.5rem;
+            margin: 0.5rem 0;
+        }
+
+        .intro h1 {
+            font-size: 2.5rem;
+            margin: 0.5rem 0;
+        }
+
+        .intro p {
+            font-size: 1.2rem;
             margin: 1rem 0;
-            padding: 1rem;
-            border: 1px solid #e0e0e0;
+        }
+
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 1.5rem 0;
+        }
+
+        .btn-container a {
+            padding: 0.8rem 1.5rem;
+            text-decoration: none;
+            border: 1px solid #000;
+            background-color: transparent;
+            color: #000;
+            font-size: 1rem;
+            font-weight: 500;
             border-radius: 5px;
+            transition: 0.3s ease;
+        }
+
+        .btn-container a:hover {
+            background-color: #000;
+            color: #fff;
+        }
+
+        .about-section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
+            gap: 2rem;
+            margin-top: 3rem;
+        }
+
+        .about-section img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+        }
+
+        .info-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 2rem;
+        }
+
+        .info-card {
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 1rem;
+            width: 250px;
+            text-align: center;
             background-color: #f9f9f9;
         }
 
@@ -76,46 +138,86 @@
             font-size: 0.9rem;
             border-top: 1px solid #e0e0e0;
         }
+
+        .contact-section {
+            margin-top: 3rem;
+        }
+
+        .contact-section p {
+            font-size: 1.1rem;
+            margin: 0.5rem 0;
+        }
+
+        .social-links {
+            margin-top: 1rem;
+        }
+
+        .social-links a {
+            margin: 0 0.5rem;
+            font-size: 1.5rem;
+            color: #000;
+            text-decoration: none;
+        }
+
+        .social-links a:hover {
+            color: #0073e6;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Anwar's Portfolio</h1>
+        <h1>Anwar</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#experience">Experience</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    
-    <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+
+    <section class="intro">
+        <h2>Hello, I'm</h2>
+        <h1>Anwar</h1>
+        <p>and, I'm open for</p>
+        <h2>Data Scientist / Data Analyst Roles</h2>
+        <div class="btn-container">
+            <a href="#">Download Resume</a>
+            <a href="#contact">Contact Info</a>
+        </div>
+    </section>
 
     <section id="about" class="about">
+        <h2>Get To Know More</h2>
         <h2>About Me</h2>
+        <div class="about-section">
+            <img src="your-image.jpg" alt="Anwar">
+            <div class="info-cards">
+                <div class="info-card">
+                    <h3>Experience</h3>
+                    <p>3 years - Data Analysis</p>
+                    <p>ADP | Infosys</p>
+                </div>
+                <div class="info-card">
+                    <h3>Education</h3>
+                    <p>B.Tech Bachelor's Degree</p>
+                    <p>IIIT - Kadapa, AP</p>
+                </div>
+            </div>
+        </div>
         <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
     </section>
 
-    <section id="skills" class="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Languages:</strong> SQL, Python</li>
-            <li><strong>Tools:</strong> Power BI, Excel, Altair Monarch</li>
-            <li><strong>Other:</strong> Data Migration, Process Improvement</li>
-        </ul>
-    </section>
-
-    <section id="projects" class="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>WorkForceNow Implementation:</strong> Migrated HR & Payroll data for large enterprises, driving $3M+ revenue.</li>
-            <li><strong>Power BI Dashboards:</strong> Designed dashboards to track project KPIs and minimize risks.</li>
-        </ul>
-    </section>
-
     <section id="contact" class="contact">
-        <h2>Contact Me</h2>
+        <h2>Get in Touch</h2>
+        <p>Contact Me</p>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/ianvrr" target="_blank">linkedin.com/in/ianvrr</a></p>
+        <p>Phone: +123 456 7890</p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/ianvrr" target="_blank">LinkedIn</a>
+            <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
+            <a href="https://www.hackerrank.com/yourprofile" target="_blank">HackerRank</a>
+            <a href="https://leetcode.com/yourprofile" target="_blank">LeetCode</a>
+        </div>
     </section>
 
     <footer>
