--- a/index.html
+++ b/index.html
@@ -31,33 +31,34 @@
 
     <section id="about" class="about">
         <h2>Get To Know More</h2>
-        <h2>About Me</h2>
-        <div class="about-section">
-            <div class="info-cards">
-                <div class="info-card left">
-                    <h3><strong>Education</strong></h3>
-                    <p>2018 - 2022</p>
-                    <p><em>Bachelor of Technology</em></p>
-                    <p><strong>VCE</strong></p>
-                </div>
-                <div class="info-card right">
-                    <h3><strong>Experience</strong></h3>
+        <h1>About Me</h1>
+        <div class="about-content">
+            <div class="education">
+                <h3><strong>Education</strong></h3>
+                <p>2018 - 2022</p>
+                <p><em>Bachelor of Technology</em></p>
+                <p><strong>VCE</strong></p>
+            </div>
+            <div class="experience">
+                <h3><strong>Experience</strong></h3>
+                <div class="job">
                     <p><strong>Dec.2022 - Now</strong></p>
                     <p><em>Data Analyst</em></p>
                     <p><i>Full Time, Hyderabad</i></p>
                     <p><strong>ADP</strong></p>
+                </div>
+                <div class="job">
                     <p><strong>Oct.2022 - Dec.2022</strong></p>
                     <p><em>Market Research Analyst</em></p>
                     <p><i>Intern, Hyderabad</i></p>
                 </div>
             </div>
-            <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
         </div>
+        <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
     </section>
 
     <section id="contact" class="contact">
-        <h2>Get in Touch</h2>
-        <p>Contact Me</p>
+        <h2>Contact Me</h2>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
         <p>Phone: +123 456 7890</p>
         <div class="social-links">
