--- a/index.html
+++ b/index.html
@@ -5,7 +5,165 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anwar's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            background-color: #ffffff;
+            color: #000000;
+            line-height: 1.6;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1.5rem 2rem;
+            border-bottom: 1px solid #e0e0e0;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
+
+        nav {
+            display: flex;
+            gap: 1.5rem;
+        }
+
+        nav a {
+            color: #000000;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 1rem;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            max-width: 1000px;
+            margin: 4rem auto;
+            padding: 0 1.5rem;
+        }
+
+        section h2 {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            font-weight: 600;
+        }
+
+        .intro {
+            margin-top: 3rem;
+            text-align: center;
+        }
+
+        .intro h2 {
+            font-size: 1.5rem;
+            margin: 0.5rem 0;
+        }
+
+        .intro h1 {
+            font-size: 3rem;
+            margin: 0.5rem 0;
+        }
+
+        .intro p {
+            font-size: 1.2rem;
+            margin: 1rem 0;
+        }
+
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 2rem 0;
+        }
+
+        .btn-container a {
+            padding: 0.8rem 1.5rem;
+            text-decoration: none;
+            border: 1px solid #000;
+            background-color: transparent;
+            color: #000;
+            font-size: 1rem;
+            font-weight: 500;
+            border-radius: 5px;
+            transition: 0.3s ease;
+        }
+
+        .btn-container a:hover {
+            background-color: #000;
+            color: #fff;
+        }
+
+        .about-section {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            margin-top: 3rem;
+        }
+
+        .info-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            gap: 1.5rem;
+            margin-top: 2rem;
+        }
+
+        .info-card {
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 1rem;
+            width: 300px;
+            text-align: center;
+            background-color: #f9f9f9;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s;
+        }
+
+        .info-card:hover {
+            transform: scale(1.05);
+        }
+
+        footer {
+            text-align: center;
+            padding: 2rem 0;
+            margin-top: 3rem;
+            font-size: 0.9rem;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        .contact-section {
+            margin-top: 3rem;
+            text-align: center;
+        }
+
+        .contact-section p {
+            font-size: 1.1rem;
+            margin: 0.5rem 0;
+        }
+
+        .social-links {
+            margin-top: 1rem;
+        }
+
+        .social-links a {
+            margin: 0 0.5rem;
+            font-size: 1.5rem;
+            color: #000;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .social-links a:hover {
+            color: #0073e6;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,41 +182,34 @@
         <p>and, I'm open for</p>
         <h2>Data Scientist / Data Analyst Roles</h2>
         <div class="btn-container">
-            <a class="button button-elevated button-primary" href="#">Download Resume</a>
+            <a href="#">Download Resume</a>
             <a href="#contact">Contact Info</a>
         </div>
     </section>
 
     <section id="about" class="about">
         <h2>Get To Know More</h2>
-        <h1>About Me</h1>
-        <div class="about-content">
-            <div class="education">
-                <h3><strong>Education</strong></h3>
-                <p>2018 - 2022</p>
-                <p><em>Bachelor of Technology</em></p>
-                <p><strong>VCE</strong></p>
-            </div>
-            <div class="experience">
-                <h3><strong>Experience</strong></h3>
-                <div class="job">
-                    <p><strong>Dec.2022 - Now</strong></p>
-                    <p><em>Data Analyst</em></p>
-                    <p><i>Full Time, Hyderabad</i></p>
-                    <p><strong>ADP</strong></p>
+        <h2>About Me</h2>
+        <div class="about-section">
+            <div class="info-cards">
+                <div class="info-card">
+                    <h3>Experience</h3>
+                    <p>3 years - Data Analysis</p>
+                    <p>ADP | Infosys</p>
                 </div>
-                <div class="job">
-                    <p><strong>Oct.2022 - Dec.2022</strong></p>
-                    <p><em>Market Research Analyst</em></p>
-                    <p><i>Intern, Hyderabad</i></p>
+                <div class="info-card">
+                    <h3>Education</h3>
+                    <p>B.Tech Bachelor's Degree</p>
+                    <p>IIIT - Kadapa, AP</p>
                 </div>
             </div>
+            <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
         </div>
-        <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
     </section>
 
     <section id="contact" class="contact">
-        <h2>Contact Me</h2>
+        <h2>Get in Touch</h2>
+        <p>Contact Me</p>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
         <p>Phone: +123 456 7890</p>
         <div class="social-links">
