--- a/index.html
+++ b/index.html
@@ -86,48 +86,48 @@
         .btn-container a {
             padding: 0.8rem 1.5rem;
             text-decoration: none;
-            border: 1px solid #000;
-            background-color: transparent;
-            color: #000;
+            border: 1px solid #0071e3;
+            background-color: #0071e3;
+            color: white;
             font-size: 1rem;
             font-weight: 500;
-            border-radius: 5px;
-            transition: 0.3s ease;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
 
         .btn-container a:hover {
-            background-color: #000;
-            color: #fff;
+            background-color: #005bb5;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        #about {
+            background-color: #e0f7fa;
+        }
+
+        #contact {
+            background-color: #f1f8e9;
         }
 
         .about-section {
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
             gap: 2rem;
             margin-top: 3rem;
-        }
-
-        .info-cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            gap: 1.5rem;
-            margin-top: 2rem;
         }
 
         .info-card {
             border: 1px solid #e0e0e0;
             border-radius: 8px;
             padding: 1rem;
-            width: 300px;
-            text-align: center;
+            width: 45%;
             background-color: #f9f9f9;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s;
         }
 
-        .info-card:hover {
-            transform: scale(1.05);
+        .info-card h3 {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
         }
 
         footer {
@@ -188,22 +188,24 @@
     </section>
 
     <section id="about" class="about">
-        <h2>Get To Know More</h2>
         <h2>About Me</h2>
         <div class="about-section">
-            <div class="info-cards">
-                <div class="info-card">
-                    <h3>Experience</h3>
-                    <p>3 years - Data Analysis</p>
-                    <p>ADP | Infosys</p>
-                </div>
-                <div class="info-card">
-                    <h3>Education</h3>
-                    <p>B.Tech Bachelor's Degree</p>
-                    <p>IIIT - Kadapa, AP</p>
-                </div>
+            <div class="info-card left">
+                <h3><strong>Education</strong></h3>
+                <p><strong>2018 - 2022</strong></p>
+                <p>Bachelor of Technology</p>
+                <p><i>VCE</i></p>
             </div>
-            <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
+            <div class="info-card right">
+                <h3><strong>Experience</strong></h3>
+                <p><strong>Dec. 2022 - Present</strong></p>
+                <p>Data Analyst</p>
+                <p><i>Full Time, Hyderabad</i></p>
+                <p><strong>ADP</strong></p>
+                <p><strong>Oct. 2022 - Dec. 2022</strong></p>
+                <p>Market Research Analyst</p>
+                <p><i>Intern, Hyderabad</i></p>
+            </div>
         </div>
     </section>
 
