--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anwar's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Manrope', sans-serif;
             background-color: #ffffff;
             color: #000000;
             line-height: 1.6;
@@ -24,14 +24,14 @@
 
         header h1 {
             margin: 0;
-            font-size: 1.8rem;
-            font-weight: 700;
+            font-size: 2rem;
+            font-weight: 600;
             color: #000;
         }
 
         nav {
             display: flex;
-            gap: 1.5rem;
+            gap: 2rem;
         }
 
         nav a {
@@ -58,8 +58,8 @@
         }
 
         .intro {
-            margin-top: 3rem;
             text-align: center;
+            margin-top: 3rem;
         }
 
         .intro h2 {
@@ -103,30 +103,38 @@
 
         .about-section {
             display: flex;
-            flex-direction: row;
             justify-content: space-between;
-            margin-top: 3rem;
+            margin-top: 4rem;
         }
 
-        .left, .right {
+        .about-section .left,
+        .about-section .right {
             width: 48%;
         }
 
-        .info-cards {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
+        .about-section h3 {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+            color: #000;
         }
 
-        .info-card {
-            border: 1px solid #e0e0e0;
-            padding: 1rem;
-            text-align: center;
-            background-color: #f9f9f9;
+        .about-section p {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
+            color: #333;
         }
 
-        .info-card h3 {
-            font-weight: bold;
+        .about-section .left p,
+        .about-section .right p {
+            font-size: 1rem;
+            color: #555;
+            font-style: normal;
+        }
+
+        .about-section .right p em {
+            font-style: italic;
+            color: #777;
         }
 
         footer {
@@ -210,27 +218,14 @@
         <h2>About Me</h2>
         <div class="about-section">
             <div class="left">
-                <div class="info-card">
-                    <h3>Education</h3>
-                    <p>2018 - 2022</p>
-                    <p>Bachelor of Technology</p>
-                    <p>VCE</p>
-                </div>
+                <h3>Education</h3>
+                <p>Bachelor of Technology</p>
+                <p>VCE (2018 - 2022)</p>
             </div>
             <div class="right">
-                <div class="info-card">
-                    <h3>Experience</h3>
-                    <p>Dec.2022 - Now</p>
-                    <p>Data Analyst</p>
-                    <p><em>Full Time, Hyderabad</em></p>
-                    <p>ADP</p>
-                </div>
-                <div class="info-card">
-                    <p>Oct.2022 - Dec.2022</p>
-                    <p>Market Research Analyst</p>
-                    <p><em>Intern, Hyderabad</em></p>
-                    <p>ADP</p>
-                </div>
+                <h3>Experience</h3>
+                <p><strong>Data Analyst @ ADP</strong></p>
+                <p><em>2 Years of Work Exp.</em></p>
             </div>
         </div>
     </section>
