--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anwar's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -25,24 +25,24 @@
         header h1 {
             margin: 0;
             font-size: 2rem;
-            font-weight: 600;
-            color: #000;
+            font-weight: 700;
         }
 
         nav {
             display: flex;
-            gap: 2rem;
+            gap: 1.5rem;
         }
 
         nav a {
-            color: #000;
+            color: #000000;
             text-decoration: none;
             font-weight: 500;
             font-size: 1rem;
+            transition: color 0.3s ease;
         }
 
         nav a:hover {
-            text-decoration: underline;
+            color: #0073e6;
         }
 
         section {
@@ -52,14 +52,14 @@
         }
 
         section h2 {
-            font-size: 2rem;
+            font-size: 2.2rem;
             margin-bottom: 1.5rem;
             font-weight: 600;
         }
 
         .intro {
-            text-align: center;
             margin-top: 3rem;
+            text-align: center;
         }
 
         .intro h2 {
@@ -68,12 +68,12 @@
         }
 
         .intro h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             margin: 0.5rem 0;
         }
 
         .intro p {
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             margin: 1rem 0;
         }
 
@@ -87,59 +87,56 @@
         .btn-container a {
             padding: 0.8rem 1.5rem;
             text-decoration: none;
-            border: 1px solid #000;
-            background-color: transparent;
             color: #000;
             font-size: 1rem;
             font-weight: 500;
-            border-radius: 5px;
-            transition: 0.3s ease;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
 
         .btn-container a:hover {
-            background-color: #000;
             color: #fff;
+            background-color: #000;
         }
 
         .about-section {
             display: flex;
             justify-content: space-between;
-            margin-top: 4rem;
+            margin-top: 3rem;
         }
 
-        .about-section .left,
-        .about-section .right {
-            width: 48%;
+        .info-section {
+            flex: 1;
+            margin-right: 3rem;
         }
 
-        .about-section h3 {
-            font-size: 1.5rem;
+        .info-section h3 {
             font-weight: 600;
-            margin-bottom: 1rem;
-            color: #000;
+            font-size: 1.3rem;
+            margin-bottom: 0.5rem;
         }
 
-        .about-section p {
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-            color: #333;
+        .info-section p {
+            font-size: 1.1rem;
         }
 
-        .about-section .left p,
-        .about-section .right p {
-            font-size: 1rem;
-            color: #555;
-            font-style: normal;
+        .experience-section {
+            flex: 1;
         }
 
-        .about-section .right p em {
+        .experience-section h3 {
+            font-weight: 600;
+            font-size: 1.3rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .experience-section p {
+            font-size: 1.1rem;
             font-style: italic;
-            color: #777;
         }
 
         footer {
             text-align: center;
-            padding: 2rem 0;
+            padding: 1.5rem 0;
             margin-top: 3rem;
             font-size: 0.9rem;
             border-top: 1px solid #e0e0e0;
@@ -170,26 +167,6 @@
         .social-links a:hover {
             color: #0073e6;
         }
-
-        /* Mobile responsive */
-        @media (max-width: 768px) {
-            header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .about-section {
-                flex-direction: column;
-            }
-
-            .left, .right {
-                width: 100%;
-            }
-
-            .intro h1 {
-                font-size: 2.5rem;
-            }
-        }
     </style>
 </head>
 <body>
@@ -217,21 +194,25 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-section">
-            <div class="left">
+            <div class="info-section">
                 <h3>Education</h3>
-                <p>Bachelor of Technology</p>
-                <p>VCE (2018 - 2022)</p>
+                <p>VCE</p>
+                <p>Bachelor of Technology (2018 - 2022)</p>
             </div>
-            <div class="right">
+
+            <div class="experience-section">
                 <h3>Experience</h3>
-                <p><strong>Data Analyst @ ADP</strong></p>
-                <p><em>2 Years of Work Exp.</em></p>
+                <p><strong>Data Analyst</strong> @ ADP</p>
+                <p><em>2 Yrs. of Work Exp.</em></p>
             </div>
         </div>
+
+        <p>Hi, I'm Anwar! A passionate Data Analyst and ETL expert with a proven track record of driving impactful business solutions. Explore my portfolio to learn more about my work and achievements.</p>
     </section>
 
     <section id="contact" class="contact">
-        <h2>Contact Me</h2>
+        <h2>Get in Touch</h2>
+        <p>Contact Me</p>
         <p>Email: <a href="mailto:anwarmahammad@hotmail.com">anwarmahammad@hotmail.com</a></p>
         <p>Phone: +123 456 7890</p>
         <div class="social-links">
