--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             margin-top: 3rem;
             font-size: 0.9rem;
             border-top: 1px solid #e0e0e0;
+            background-color: #000;
+            color: #fff;
         }
 
         .contact-section {
@@ -162,6 +164,14 @@
         .social-links a:hover {
             color: #0073e6;
         }
+
+        .about-section .get-to-know {
+            font-size: 0.9rem;
+            color: #666;
+            text-align: center;
+            margin-bottom: 0.5rem;
+        }
+
     </style>
 </head>
 <body>
@@ -187,7 +197,9 @@
     </section>
 
     <section id="about" class="about">
-        <h2>Get To Know More</h2>
+        <div class="get-to-know">
+            <p>Get To Know More...</p>
+        </div>
         <h2>About Me</h2>
         <div class="about-section">
             <div class="left">
