--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         }
 
         .contact-section a {
-            color: #fff;
+            color: #000;  /* Updated color to black */
             text-decoration: none;
             font-size: 1.5rem;
             margin: 0 1rem;
@@ -156,7 +156,7 @@
         .social-links a {
             margin: 0 0.5rem;
             font-size: 1.5rem;
-            color: #fff;
+            color: #000;  /* Updated color to black */
             text-decoration: none;
             transition: color 0.3s;
         }
@@ -197,9 +197,6 @@
     </section>
 
     <section id="about" class="about">
-        <div class="get-to-know">
-            <p>Get To Know More...</p>
-        </div>
         <h2>About Me</h2>
         <div class="about-section">
             <div class="left">
