--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
             align-items: center;
             padding: 1.5rem 2rem;
             border-bottom: 1px solid #e0e0e0;
-            position: relative;
-            z-index: 10;
         }
 
         header h1 {
@@ -64,7 +62,7 @@
         }
 
         .intro h2 {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             margin: 0.5rem 0;
         }
 
@@ -144,7 +142,7 @@
         }
 
         .contact-section a {
-            color: #000;
+            color: #000;  /* Updated color to black */
             text-decoration: none;
             font-size: 1.5rem;
             margin: 0 1rem;
@@ -158,7 +156,7 @@
         .social-links a {
             margin: 0 0.5rem;
             font-size: 1.5rem;
-            color: #000;
+            color: #000;  /* Updated color to black */
             text-decoration: none;
             transition: color 0.3s;
         }
@@ -167,75 +165,13 @@
             color: #0073e6;
         }
 
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            header {
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 1rem;
-            }
-
-            nav {
-                flex-direction: column;
-                gap: 0.5rem;
-                align-items: flex-start;
-            }
-
-            nav a {
-                font-size: 0.9rem;
-            }
-
-            .intro h1 {
-                font-size: 2.5rem;
-            }
-
-            .intro h2, .intro p {
-                font-size: 1rem;
-            }
-
-            .btn-container {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
-
-            .about-section {
-                flex-direction: column;
-                gap: 2rem;
-                text-align: center;
-            }
-
-            .left, .right {
-                width: 100%;
-            }
-
-            footer {
-                font-size: 0.8rem;
-            }
+        .about-section .get-to-know {
+            font-size: 0.9rem;
+            color: #666;
+            text-align: center;
+            margin-bottom: 0.5rem;
         }
 
-        @media (max-width: 480px) {
-            .intro h1 {
-                font-size: 2rem;
-            }
-
-            .intro h2, .intro p {
-                font-size: 0.9rem;
-            }
-
-            .btn-container a {
-                padding: 0.6rem 1rem;
-                font-size: 0.9rem;
-            }
-
-            nav {
-                align-items: center;
-                text-align: center;
-            }
-
-            nav a {
-                font-size: 0.8rem;
-            }
-        }
     </style>
 </head>
 <body>
