--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 </head>
 <body>
     <header>
-        <h1>Anwar</h1>
+        <h1>
+            <a href="https://ianvrr.github.io/" style="text-decoration: none; inherit;">Anwar</a>
+        </h1>
         <nav>
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
