--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <body>
     <header>
         <h1>
-            <a href="https://ianvrr.github.io/" style="text-decoration: none; inherit;">Anwar</a>
+            <a href="https://ianvrr.github.io/">Anwar</a>
         </h1>
         <nav>
             <a href="#about">About</a>
