--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
 </head>
 <body>
     <header>
-        <h1>
-            <a href="https://ianvrr.github.io/">Anwar</a>
-        </h1>
+        <h1>Anwar</h1>
         <nav>
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
